Fix question and icon overlap in FAQuestion

--- a/src/MainPage/Questions/FAQuestion/index.css
+++ b/src/MainPage/Questions/FAQuestion/index.css
@@ -24,6 +24,7 @@ section.faq div.container div h3.question button {
   padding: 0;
   margin: 0;
   align-items: center;
+  margin-right: 26px;
 }
 section.faq div.container div h3.question button:hover {
   background: none;
